--- a/css/mypage.css
+++ b/css/mypage.css
@@ -444,6 +444,7 @@ body {
 }
 
 .portfolio-card:hover > .card-tag {
+   
     left: -100%;
 }
 
@@ -452,9 +453,10 @@ body {
 .tag {
     position: relative;
     display: inline-block;
+    font-size:16px;
     padding: 5px 10px;
     margin: 5px;
-    opacity: .9;
+    border-radius:5px;
     transition: opacity ease .2s;
     box-shadow: rgba(253, 253, 253, 0.1) 0px 1px 8px, rgba(253,253, 253, .1) 0px 1px 6px;
 }
@@ -515,6 +517,35 @@ body {
         padding: 10px;
         font-size: 14px;
     }
+
+/*portfolio Modal內容*/
+.portfolio-youtubevideo {
+    width: 854px;
+    height: 480px;
+    max-width: 100%;
+}
+
+@media screen and (max-width:960px) {
+    .portfolio-youtubevideo {
+        width: 640px;
+        height: 360px;
+    }
+}
+
+@media screen and (max-width:640px) {
+    .portfolio-youtubevideo {
+        width: 360px;
+        height: 202px;
+    }
+}
+
+@media screen and (max-width:360px) {
+    .portfolio-youtubevideo {
+        width: px;
+        height: 202px;
+    }
+}
+
 
 /*Footer*/
 
