--- a/css/mypage.css
+++ b/css/mypage.css
@@ -1,7 +1,6 @@
 ﻿/*全域*/
 body {
     background-color: rgb(243,243,243);
-    padding-top: 20px;
     font-family: 'Microsoft JhengHei';
 }
 
@@ -444,7 +443,6 @@ body {
 }
 
 .portfolio-card:hover > .card-tag {
-   
     left: -100%;
 }
 
@@ -453,10 +451,10 @@ body {
 .tag {
     position: relative;
     display: inline-block;
-    font-size:16px;
+    font-size: 16px;
     padding: 5px 10px;
     margin: 5px;
-    border-radius:5px;
+    border-radius: 5px;
     transition: opacity ease .2s;
     box-shadow: rgba(253, 253, 253, 0.1) 0px 1px 8px, rgba(253,253, 253, .1) 0px 1px 6px;
 }
@@ -640,3 +638,35 @@ body {
         text-align: right;
         color: rgba(255,255,255,.8);
     }
+
+
+
+/*頁面載入進度條**/
+.pageloading-background {
+    position: fixed;
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(243,243,243);
+    z-index: 999;
+}
+
+.pageloading-progress {
+    height: 3px;
+    position: absolute;
+    top: 0;
+    width: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background-color: #333;
+}
+
+.pageloading-content {
+    position: absolute;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5em;
+}
