--- a/css/mypage.css
+++ b/css/mypage.css
@@ -670,3 +670,25 @@ body {
     align-items: center;
     font-size: 2.5em;
 }
+
+/****回到頂部按鈕CSS*****/
+
+.btnBackToTop {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5em;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    right: 10px;
+    bottom: 10px;
+    background-color: #555;
+    border-radius: 100%;
+    animation-duration: .2s;
+}
+
+    .btnBackToTop:hover {
+        cursor: pointer;
+    }
